// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Header Test Suite renders signed in navigation header unchanged 1`] = `
<div>
  <nav
    class="root"
  >
    <a
      aria-label="Home"
      href="/"
    >
      <div
        class="homeContainer"
      >
        <svg
          class="logo"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M946.5 505L534.6 93.4a31.93 31.93 0 0 0-45.2 0L77.5 505c-12 12-18.8 28.3-18.8 45.3 0 35.3 28.7 64 64 64h43.4V908c0 17.7 14.3 32 32 32H448V716h112v224h265.9c17.7 0 32-14.3 32-32V614.3h43.4c17 0 33.3-6.7 45.3-18.8 24.9-25 24.9-65.5-.1-90.5z"
          />
        </svg>
      </div>
    </a>
    <div
      class="logoContainer"
    >
      <a
        aria-hidden="true"
        href="/"
      >
        <h2
          class="datatattat"
        >
          DATATATTAT
        </h2>
      </a>
    </div>
    <div>
      User Menu
    </div>
  </nav>
</div>
`;

exports[`Navigation Header Test Suite renders signed out navigation header unchanged 1`] = `
<div>
  <nav
    class="root"
  >
    <a
      aria-label="Home"
      href="/"
    >
      <div
        class="homeContainer"
      >
        <svg
          class="logo"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 1024 1024"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M946.5 505L534.6 93.4a31.93 31.93 0 0 0-45.2 0L77.5 505c-12 12-18.8 28.3-18.8 45.3 0 35.3 28.7 64 64 64h43.4V908c0 17.7 14.3 32 32 32H448V716h112v224h265.9c17.7 0 32-14.3 32-32V614.3h43.4c17 0 33.3-6.7 45.3-18.8 24.9-25 24.9-65.5-.1-90.5z"
          />
        </svg>
      </div>
    </a>
    <div
      class="logoContainer"
    >
      <a
        aria-hidden="true"
        href="/"
      >
        <h2
          class="datatattat"
        >
          DATATATTAT
        </h2>
      </a>
    </div>
    <a
      class="simpleButton"
      href="/api/auth/signin?callbackUrl=/"
    >
      <svg
        class="logo"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.5 6.5C7.5 8.981 9.519 11 12 11s4.5-2.019 4.5-4.5S14.481 2 12 2 7.5 4.019 7.5 6.5zM20 21h1v-1c0-3.859-3.141-7-7-7h-4c-3.86 0-7 3.141-7 7v1h17z"
        />
      </svg>
      <p>
        Login
      </p>
    </a>
  </nav>
</div>
`;
